--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="min/custom-min.css" type="text/css" rel="stylesheet" >
 
     <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body id="top" class="scrollspy">
 
@@ -201,7 +201,7 @@
                             <label for="icon_prefix2" class="white-text">Message</label>
                         </div>
                         <div class="col offset-s7 s5">
-                            <button class="btn waves-effect waves-light red darken-2" type="submit">Submit
+                            <button class="btn waves-effect waves-light red darken-2  " type="submit">Submit
                                 <i class="mdi-content-send right white-text"></i>
                             </button>
                         </div>
