--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <!--Hero-->
 <div class="section no-pad-bot" id="index-banner"
-      style="background-image:url('http://wallpapercave.com/wp/dDx3ZaO.jpg')">
+      style="background-image:url('img/cover.jpeg')">
     <div class="container">
         <h1 class="text_h center header cd-headline letters type">
             <span>I Love</span>
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="row">
             <div  class="col s12">
-                <h2 class="center header text_h2"> I am an avid Guitar
+                <h2 class="center header text_h2"> I am an avid
                   <span class="span_h2"> Guitar  </span> enthusiast.
                   I intend to make your learning fun.
                   I won't just <span class="span_h2"> teach </span> you how to play a guitar, rather I would teach you how to
@@ -112,7 +112,7 @@
 <!--Schedule-->
 <div class="section scrollspy red darken-1" id="schedule">
     <div class="container">
-        <h2 class="header text_b">Schedule </h2>
+        <h2 class="header" style="color:white">Schedule </h2>
           <ul class="collection">
 
             <li class="collection-item avatar light-blue lighten-3">
@@ -144,7 +144,7 @@
 
 <!--Parallax-->
 <div class="parallax-container">
-    <div class="parallax"><img src="img/parallax1.png"></div>
+    <div class="parallax"><img src="http://wallpapercave.com/wp/dDx3ZaO.jpg"></div>
 </div>
 
 <!--About-->
