--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <!--Hero-->
 <div class="section no-pad-bot" id="index-banner"
-      style="background-image:url('img/cover.jpeg')">
+      style="background-image:url('img/cover.jpg')">
     <div class="container">
         <h1 class="text_h center header cd-headline letters type">
             <span>I Love</span>
