Resized Image and changed text color

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 
 <!--Hero-->
 <div class="section no-pad-bot" id="index-banner"
-      style="background-image:url('img/cover.jpg')">
+      style="background-image:url('img/cover.jpg');background-size:100%;">
     <div class="container">
         <h1 class="text_h center header cd-headline letters type">
-            <span>I Love</span>
+            <span style="color:red">I Love</span>
             <span class="cd-words-wrapper waiting">
-                <b class="is-visible">strumming</b>
-                <b>plucking</b>
-                <b>Guitaring</b>
+                <b class="is-visible" style="color:red">strumming</b>
+                <b style="color:red">plucking</b>
+                <b style="color:red">Guitaring</b>
             </span>
         </h1>
     </div>
