Changed text color

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       style="background-image:url('img/cover.jpg');background-size:100%;">
     <div class="container">
         <h1 class="text_h center header cd-headline letters type">
-            <span style="color:red">I Love</span>
+            <span style="color:#f44336">I Love</span>
             <span class="cd-words-wrapper waiting">
-                <b class="is-visible" style="color:red">strumming</b>
-                <b style="color:red">plucking</b>
-                <b style="color:red">Guitaring</b>
+                <b class="is-visible" style="color:#d32f2f">strumming</b>
+                <b style="color:#d32f2f">plucking</b>
+                <b style="color:#d32f2f">Guitaring</b>
             </span>
         </h1>
     </div>
@@ -209,11 +209,8 @@
                 </form>
             </div>
             <div class="col l3 s12">
-                <h5 class="white-text">joashpereira.com</h5>
-                <ul>
-                    <li><a class="white-text" href="http://www.joashpereira.com/">Home</a></li>
-                    <li><a class="white-text" href="http://www.joashpereira.com/blog">Blog</a></li>
-                </ul>
+
+
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Social</h5>
