Added forms upgrade

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
-                <form class="col s12" action="contact.php" method="post">
+                <form class="col s12" action="https://formspree.io/ghadgeajinkya95@gmail.com" method="post">
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="mdi-action-account-circle prefix white-text"></i>
@@ -200,8 +200,11 @@
                             <textarea id="icon_prefix2" name="message" class="materialize-textarea white-text"></textarea>
                             <label for="icon_prefix2" class="white-text">Message</label>
                         </div>
+                        <input type="hidden" name="_next" value="guitarshastri.github.io" />
+                        <input type="hidden" name="_subject" value="Enquiry for Guitar Classes" />
+                        <input type="hidden" name="_cc" value="guitarshastri@gmail.com" />
                         <div class="col offset-s7 s5">
-                            <button class="btn waves-effect waves-light red darken-2  " type="submit">Submit
+                            <button class="btn waves-effect waves-light red darken-2" value="send" type="submit">Submit
                                 <i class="mdi-content-send right white-text"></i>
                             </button>
                         </div>
@@ -216,22 +219,22 @@
                 <h5 class="white-text">Social</h5>
                 <ul>
                     <li>
-                        <a class="white-text" href="https://www.behance.net/joashp">
+                        <a class="white-text" href="">
                             <i class="small fa fa-behance-square white-text"></i> Behance
                         </a>
                     </li>
                     <li>
-                        <a class="white-text" href="https://www.facebook.com/joash.c.pereira">
+                        <a class="white-text" href="">
                             <i class="small fa fa-facebook-square white-text"></i> Facebook
                         </a>
                     </li>
                     <li>
-                        <a class="white-text" href="https://github.com/joashp">
+                        <a class="white-text" href="">
                             <i class="small fa fa-github-square white-text"></i> Github
                         </a>
                     </li>
                     <li>
-                        <a class="white-text" href="https://www.linkedin.com/in/joashp">
+                        <a class="white-text" href="">
                             <i class="small fa fa-linkedin-square white-text"></i> Linkedin
                         </a>
                     </li>
