Changed _next attribute

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <textarea id="icon_prefix2" name="message" class="materialize-textarea white-text"></textarea>
                             <label for="icon_prefix2" class="white-text">Message</label>
                         </div>
-                        <input type="hidden" name="_next" value="" />
+                        <input type="hidden" name="_next" value="https://guitarshastri.github.io" />
                         <input type="hidden" name="_subject" value="Enquiry for Guitar Classes" />
                         <input type="hidden" name="_cc" value="guitarshastri@gmail.com" />
                         <div class="col offset-s7 s5">
